added new html files, new images and added javascript file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="main-section">
       <div class="transactions-section">
         <button id="close-btn">
-          <img src="X Logo Icon.png" alt="" height="30px" width="30px" />
+          <img src="images/X Logo Icon.png" alt="" height="30px" width="30px" />
         </button>
         <h4>Transactions</h4>
         <div class="t-boxes"></div>
