changes made to js file and about paragraph

--- a/about.html
+++ b/about.html
@@ -29,24 +29,16 @@
       <div class="img-container"><img src="images/pic.jpg" alt="" /></div>
       <div class="text-container">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-          dolorem facilis! Provident minima facere nostrum dolor alias amet.
-          Labore qui iusto obcaecati sunt nam, asperiores eum ducimus aliquid
-          debitis nulla doloribus error! Quo dolorum perferendis harum, possimus
-          nobis impedit esse similique nemo necessitatibus, laborum eveniet
-          obcaecati consectetur quia voluptate tempora labore laudantium quaerat
-          error dolorem in? Velit, non! Suscipit tempora officia dolore
-          voluptates reiciendis fugit dicta adipisci ab, voluptatem
-          exercitationem, consectetur aliquam quis temporibus culpa inventore
-          libero id error. Nesciunt omnis alias, at sequi, eius accusamus,
-          nostrum magni totam animi quam perferendis ex architecto maxime
-          delectus. In sunt, expedita, sequi esse vel quasi a inventore dolorum,
-          facilis laudantium iure quae sint commodi tempora molestiae architecto
-          aperiam distinctio? Ipsam dolores ducimus eius porro, doloribus nemo,
-          fuga soluta pariatur illo ad tempore perferendis est ratione, nulla
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius tempora
-          eligendi repellendus natus pariatur placeat adipisci itaque omnis ipsa
-          fugit!
+          Hi, I’m Yetunde Babatunde, an aspiring Web Developer passionate about
+          building clean, responsive, and user-friendly websites. I’m currently
+          learning the foundations of HTML, CSS, and JavaScript, and this is my
+          very first mini project to showcase my journey into web development. I
+          enjoy solving problems, turning ideas into interactive designs, and
+          constantly learning new technologies. My goal is to keep improving my
+          skills and eventually create projects that not only look great but
+          also make a real impact. When I’m not coding, I love exploring new
+          tools, learning from other developers, and experimenting with creative
+          ideas.
         </p>
       </div>
     </div>
