--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leemo</title>
+    <script
+      src="https://kit.fontawesome.com/c578b459da.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css files/mobile.css" />
     <link rel="stylesheet" href="css files/main.css" />
     <link rel="stylesheet" href="css files/index.css" />
@@ -21,7 +25,7 @@
 
       <nav id="navbar">
         <button class="close-button">
-          <img src="images/X Logo Icon.png" alt="" height="40px" width="40px" />
+          <i class="fa-solid fa-xmark"></i>
         </button>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -31,13 +35,7 @@
         </ul>
       </nav>
       <button class="menu-btn">
-        <img
-          src="images/menu.png"
-          alt="menu"
-          class="menu-icon"
-          width="30px"
-          height="30px"
-        />
+        <i class="fa-solid fa-bars"></i>
       </button>
     </header>
     <h1>About us</h1>
@@ -59,6 +57,9 @@
           developers, and experimenting with creative ideas.
         </p>
       </div>
+      <footer>
+        <p>&copy; 2025 Yetunde Babatunde. All rights reserved.</p>
+      </footer>
     </div>
     <script src="js files/index.js"></script>
     <script src="js files/main.js"></script>
