--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us</title>
+    <script
+      src="https://kit.fontawesome.com/c578b459da.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css files/contact.css" />
     <link rel="stylesheet" href="css files/mobile.css" />
     <link rel="stylesheet" href="css files/main.css" />
@@ -21,7 +25,7 @@
 
       <nav id="navbar">
         <button class="close-button">
-          <img src="images/X Logo Icon.png" alt="" height="40px" width="40px" />
+          <i class="fa-solid fa-xmark"></i>
         </button>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -31,15 +35,65 @@
         </ul>
       </nav>
       <button class="menu-btn">
-        <img
-          src="images/menu.png"
-          alt="menu"
-          class="menu-icon"
-          width="30px"
-          height="30px"
-        />
+        <i class="fa-solid fa-bars"></i>
       </button>
     </header>
+
+    <div class="contact-container">
+      <h1>Contact Us</h1>
+      <p>We'd love to hear from you! Please fill out the form below.</p>
+
+      <form id="contactForm">
+        <div class="form-group">
+          <label for="name">Full Name</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Enter your name"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Enter your email"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input
+            type="text"
+            id="subject"
+            name="subject"
+            placeholder="Enter the subject"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea
+            id="message"
+            name="message"
+            rows="5"
+            placeholder="Write your message here..."
+            required
+          ></textarea>
+        </div>
+
+        <button type="submit">Send Message</button>
+      </form>
+
+      <p id="responseMsg"></p>
+    </div>
+
     <script src="js files/index.js"></script>
     <script src="js files/main.js"></script>
   </body>
